--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "talk-to-heal",
   "version": "1.0.0",
+  "type": "module",
   "description": "online mental doctor using chatgpt api",
   "main": "index.js",
   "scripts": {
